{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 64,
  "lineage": "e6dfce16-800a-be02-0a15-d84e00d578a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0505148b3591e4c07",
            "arn": "arn:aws:ec2:eu-west-2:571804394804:instance/i-0c15178b9a4de5231",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c15178b9a4de5231",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "veryCool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b008fa605997ed24"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b008fa605997ed24",
            "private_dns": "ip-10-0-1-50.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-130-206-104.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.206.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb259256d08895ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a35c341248ddb86d",
            "tags": {
            },
            "tags_all": {
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db21b936d9ac43c4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "dependencies": [
            "aws_network_interface.very_cool_interface",
            "aws_security_group.security-group1",
            "aws_subnet.subnetpub",
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "very_cool_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:internet-gateway/igw-04d26f2ecd92f0f0e",
            "id": "igw-04d26f2ecd92f0f0e",
            "owner_id": "571804394804",
            "tags": {
              "Name": "very_cool_vpc"
            },
            "tags_all": {
              "Name": "very_cool_vpc"
            },
            "vpc_id": "vpc-059cf9f56d7d76672"
          },
          "dependencies": [
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "very_cool_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:network-interface/eni-0b008fa605997ed24",
            "id": "eni-0b008fa605997ed24",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:0f:95:87:ca:cc",
            "owner_id": "571804394804",
            "private_dns_name": "ip-10-0-1-50.eu-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0db21b936d9ac43c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a35c341248ddb86d",
            "tags": {
              "Name": "network_interface"
            },
            "tags_all": {
              "Name": "network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.security-group1",
            "aws_subnet.subnetpub",
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "very_cool_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:route-table/rtb-0e8d90fa8af24e883",
            "id": "rtb-0e8d90fa8af24e883",
            "owner_id": "571804394804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d26f2ecd92f0f0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-059cf9f56d7d76672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.very_cool_gateway",
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "very_cool_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0462dbe67a12fc67d",
            "route_table_id": "rtb-0e8d90fa8af24e883",
            "subnet_id": "subnet-0a35c341248ddb86d"
          },
          "dependencies": [
            "aws_internet_gateway.very_cool_gateway",
            "aws_route_table.very_cool_table",
            "aws_subnet.subnetpub",
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:security-group/sg-0db21b936d9ac43c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db21b936d9ac43c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows ssh in",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security-group1",
            "name_prefix": "",
            "owner_id": "571804394804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group1"
            },
            "tags_all": {
              "Name": "security_group1"
            },
            "timeouts": null,
            "vpc_id": "vpc-059cf9f56d7d76672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetpriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:subnet/subnet-03abb41a0b8b06ff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03abb41a0b8b06ff0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571804394804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSub"
            },
            "tags_all": {
              "Name": "privateSub"
            },
            "vpc_id": "vpc-059cf9f56d7d76672"
          },
          "dependencies": [
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:subnet/subnet-0a35c341248ddb86d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a35c341248ddb86d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571804394804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSub"
            },
            "tags_all": {
              "Name": "publicSub"
            },
            "vpc_id": "vpc-059cf9f56d7d76672"
          },
          "dependencies": [
            "aws_vpc.very_cool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "very_cool_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:571804394804:vpc/vpc-059cf9f56d7d76672",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ce2bbfa57b58100",
            "default_route_table_id": "rtb-0f222b7854a7e6dcc",
            "default_security_group_id": "sg-0517d4ac15aab4142",
            "dhcp_options_id": "dopt-00902e662843b7de0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059cf9f56d7d76672",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f222b7854a7e6dcc",
            "owner_id": "571804394804"
          }
        }
      ]
    }
  ]
}